--- a/exercise9/exercise9.ipynb
+++ b/exercise9/exercise9.ipynb
@@ -48,170 +48,127 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import udf, col, lit, input_file_name, concat_ws, collect_list, size, array_distinct\n",
-    "from pyspark.sql.types import ArrayType, StringType\n",
-    "\n",
-    "# Initialize Spark Session\n",
-    "spark = SparkSession.builder.appName(\"CharacterShingling\").getOrCreate()\n",
-    "path = \"/grundgesetz/brd_grundgesetz_63_2019-04-03.txt\"\n",
-    "\n",
-    "# Load all text files from folder into a DataFrame\n",
-    "documents = spark.read.text(path).withColumnRenamed(\"value\", \"text\")\n",
-    "\n",
-    "# Add column for file name\n",
-    "documents = documents.withColumn(\"file_name\", input_file_name())\n",
-    "\n",
-    "# Group documents by file name and concatenate to single block of text\n",
-    "documents_grouped = documents.groupBy(\"file_name\").agg(\n",
-    "    concat_ws(\" \", collect_list(\"text\")).alias(\"full_text\")\n",
-    ")\n",
-    "\n",
-    "\n",
-    "# Function to generate shingles of size k from a text\n",
-    "def generate_shingles(text, k):\n",
-    "    shingles = set()\n",
-    "\n",
-    "    # Handle line breaks, hyphens and remove extra spaces\n",
-    "    text = text.replace(\"\\n\", \" \").replace(\"- \", \"\").replace(\"\\r\", \" \")\n",
-    "    text = \" \".join(text.split())\n",
-    "\n",
-    "    # Generate shingles\n",
-    "    for i in range(len(text) - k + 1):\n",
-    "        shingle = text[i:i + k]\n",
-    "        shingles.add(shingle)\n",
-    "\n",
-    "    return list(shingles)\n",
-    "\n",
-    "\n",
-    "# Register the function as a UDF\n",
-    "shingles_udf = udf(lambda text, k: generate_shingles(text, k), ArrayType(StringType()))\n",
-    "\n",
-    "# Generate shingles for k = 5 and k = 9\n",
-    "results = {}\n",
-    "for k in [5, 9]:\n",
-    "    # Add column for shingles of size k\n",
-    "    shingles_df = documents_grouped.withColumn(f\"shingles_{k}\", shingles_udf(col(\"full_text\"), lit(k)))\n",
-    "\n",
-    "    # Add column for the number of distinct shingles\n",
-    "    shingles_count_df = shingles_df.withColumn(f\"distinct_shingles_{k}\", size(array_distinct(col(f\"shingles_{k}\"))))\n",
-    "\n",
-    "    # Add results to the dictionary\n",
-    "    results[k] = shingles_count_df.select(\"file_name\", f\"distinct_shingles_{k}\")\n",
-    "\n",
-    "    # Filter results for the Grundgesetz\n",
-    "    grundgesetz_results = results[k].filter(col(\"file_name\").contains(\"grundgesetz\"))\n",
-    "\n",
-    "    # Display results\n",
-    "    print(f\"\\nResults for k={k}:\")\n",
-    "    results[k].show(truncate=False)\n",
-    "\n",
-    "    print(f\"\\nGrundgesetz results for k={k}:\")\n",
-    "    grundgesetz_results.show(truncate=False)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Exercise 3"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### a)\n",
-    "Hash functions\n",
+    "import numpy as np\n",
     "\n",
-    "$h_1(x) = (2x + 1) \\mod{6} $ <br>\n",
-    "$h_2(x) = (3x + 2) \\mod{6} $ <br>\n",
-    "$h_3(x) = (5x + 2) \\mod{6} $ <br>\n",
+    "def pagerank(M, beta, epsilon):\n",
+    "    \"\"\"\n",
+    "    Compute the PageRank vector using the Google formulation and the Power Iteration method.\n",
     "\n",
-    "Now we compute the hash values for $x \\in \\{0,1,2,3,4,5\\}$\n",
+    "    Parameters:\n",
+    "        M (numpy.ndarray): The dense adjacency matrix of the graph (column-stochastic).\n",
+    "        beta (float): The teleportation factor.\n",
+    "        epsilon (float): The convergence threshold.\n",
     "\n",
-    "For $h_1(x) = (2x + 1) \\mod{6} $:\n",
+    "    Returns:\n",
+    "        numpy.ndarray: The PageRank vector.\n",
+    "    \"\"\"\n",
+    "    # Number of nodes in the graph\n",
+    "    N = M.shape[0]\n",
     "\n",
-    "$h_1(0) = 1$ <br>\n",
-    "$h_1(1) = 3$ <br>\n",
-    "$h_1(2) = 5$ <br>\n",
-    "$h_1(3) = 1$ <br>\n",
-    "$h_1(4) = 3$ <br>\n",
-    "$h_1(5) = 5$ <br>\n",
+    "    # Compute the Google Matrix A\n",
+    "    teleportation_matrix = np.ones((N, N)) / N  # Dense matrix with all entries 1/N\n",
+    "    A = beta * M + (1 - beta) * teleportation_matrix\n",
     "\n",
-    "For $h_2(x) = (3x + 2) \\mod{6} $:\n",
+    "    # Initialize the PageRank vector (uniform distribution)\n",
+    "    r = np.ones(N) / N\n",
     "\n",
-    "$h_2(0) = 2$ <br>\n",
-    "$h_2(1) = 5$ <br>\n",
-    "$h_2(2) = 2$ <br>\n",
-    "$h_2(3) = 5$ <br>\n",
-    "$h_2(4) = 2$ <br>\n",
-    "$h_2(5) = 5$ <br>\n",
+    "    # Power Iteration Method\n",
+    "    while True:\n",
+    "        r_new = A @ r  # Matrix-vector multiplication\n",
+    "        # Check for convergence using L1 norm\n",
+    "        if np.linalg.norm(r_new - r, 1) < epsilon:\n",
+    "            break\n",
+    "        r = r_new\n",
     "\n",
-    "For $h_3(x) = (5x + 2) \\mod{6}$:\n",
+    "    return r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PageRank Vector: [0.23148148 0.31481481 0.4537037 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example matrix from exercise 1\n",
+    "M = np.array([\n",
+    "    [1/3, 1/2, 0],\n",
+    "    [1/3, 0, 1/2],\n",
+    "    [1/3, 1/2, 1/2]\n",
+    "])\n",
     "\n",
-    "$h_3(0) = 2$ <br>\n",
-    "$h_3(1) = 1$ <br>\n",
-    "$h_3(2) = 0$ <br>\n",
-    "$h_3(3) = 5$ <br>\n",
-    "$h_3(4) = 4$ <br>\n",
-    "$h_3(5) = 3$ <br>\n",
+    "# Parameters\n",
+    "beta = 1  # Teleportation factor\n",
+    "epsilon = 1/12  # Convergence threshold\n",
     "\n",
-    "### MinHash Signature for each set:\n",
+    "# Compute PageRank\n",
+    "pagerank_vector = pagerank(M, beta, epsilon)\n",
+    "print(\"PageRank Vector:\", pagerank_vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_clique_matrix(n):\n",
+    "    \"\"\"\n",
+    "    Generate the column-stochastic adjacency matrix for a clique graph with n vertices.\n",
     "\n",
-    "$S_1 \\{2,5\\}$ (non-zero entries in $S_1$):\n",
+    "    Parameters:\n",
+    "        n (int): Number of vertices in the clique.\n",
     "\n",
-    "$h_1(2) = 5, h_1(5) = 5$, $Min = 5$<br>\n",
-    "$h_2(2) = 2, h_2(5) = 5$, $Min = 2$<br>\n",
-    "$h_3(2) = 0, h_3(5) = 3$, $Min = 0$<br>\n",
+    "    Returns:\n",
+    "        numpy.ndarray: Column-stochastic adjacency matrix for the clique.\n",
+    "    \"\"\"\n",
+    "    M = np.ones((n, n))  # Fully connected graph (all entries are 1)\n",
+    "    np.fill_diagonal(M, 0)  # Remove self-loops\n",
+    "    M /= M.sum(axis=0)  # Normalize to make it column-stochastic\n",
+    "    return M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PageRank Vector for M(4): [0.25 0.25 0.25 0.25]\n",
+      "PageRank Vector for M(6): [0.16666667 0.16666667 0.16666667 0.16666667 0.16666667 0.16666667]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate M(4) and M(6)\n",
+    "M4 = generate_clique_matrix(4)\n",
+    "M6 = generate_clique_matrix(6)\n",
     "\n",
-    "The same for sets $S_2,S_3,S_4$, the signature table looks like:\n",
+    "# Compute PageRank vectors\n",
+    "pagerank_M4 = pagerank(M4, beta, epsilon)\n",
+    "pagerank_M6 = pagerank(M6, beta, epsilon)\n",
     "\n",
-    "| Set  | $h_1 Min$ | $h_2 Min$ | $h_3 Min$|\n",
-    "|------|-----------|-----------|----------|\n",
-    "| $S_1$| 5         | 2         | 0        |\n",
-    "| $S_2$| 1         | 2         | 1        |\n",
-    "| $S_3$| 1         | 2         | 4        |\n",
-    "| $S_4$| 1         | 2         | 0        |\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "### b)\n",
-    "$h_3(x)$ is a true permutation because all hash values $\\{0,1,2,3,4,5\\}$ are distinct.\n",
-    "\n",
-    "Collisions:\n",
-    "\n",
-    "$h_1(x)$: <br>\n",
-    "$h_1(0) = h_1(3) = 1$ <br>\n",
-    "$h_1(1) = h_1(4) = 3$ <br>\n",
-    "$h_1(2) = h_1(5) = 5$ <br>\n",
-    "\n",
-    "$h_2(x)$: <br>\n",
-    "$h_2(0) = h_2(2) = h_2(4) = 2$ <br>\n",
-    "$h_2(1) = h_2(3) = h_2(5)= 3$ <br>\n",
-    "\n",
-    "\n",
-    "### c)\n",
-    "| Pair        | MinHash Similarity | Jaccard Similarity |\n",
-    "|-------------|--------------------|--------------------|\n",
-    "| $S_1$,$S_2$ | 0.33               | 0                  |\n",
-    "| $S_1$,$S_3$ | 0.33               | 0                  |\n",
-    "| $S_1$,$S_4$ | 0.67               | 0.33               |\n",
-    "| $S_2$,$S_3$ | 0.33               | 0                  |\n",
-    "| $S_2$,$S_4$ | 0.67               | 0.33               |\n",
-    "| $S_3$,$S_4$ | 0.33               | 0.33               |\n",
-    "\n",
-    "Due to the small number of hash functions we cannot see that the MinHash similarity would actually converge to the true Jaccard similarity."
+    "print(\"PageRank Vector for M(4):\", pagerank_M4)\n",
+    "print(\"PageRank Vector for M(6):\", pagerank_M6)"
    ]
   },
   {
@@ -219,6 +176,30 @@
    "metadata": {},
    "source": [
     "# Exercise 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ey\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"ey\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 5"
    ]
   },
   {
