--- a/exercise9/exercise9.ipynb
+++ b/exercise9/exercise9.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -303,6 +303,104 @@
    "metadata": {},
    "source": [
     "# Exercise 5 (in the PDF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+------------------+--------------------+\n",
+      "|InstanceType|ProductDescription|        AveragePrice|\n",
+      "+------------+------------------+--------------------+\n",
+      "|   c4.xlarge|           Windows| 0.23910000000000034|\n",
+      "|    t3.micro|           Windows|0.012699999999999993|\n",
+      "|  t3.2xlarge|           Windows| 0.25780000000000025|\n",
+      "|  t2.2xlarge|           Windows|  0.1848999999999999|\n",
+      "|  m5.4xlarge|        Linux/UNIX| 0.25776746268656775|\n",
+      "|   t2.xlarge|        Linux/UNIX|  0.0614000000000001|\n",
+      "| m5.12xlarge|        Linux/UNIX|  1.2112850490196077|\n",
+      "|   i3.xlarge|           Windows| 0.28719999999999923|\n",
+      "| x1.16xlarge|           Windows|   5.144800000000003|\n",
+      "|   c5.xlarge|        Linux/UNIX| 0.05872099644128116|\n",
+      "|  c5.9xlarge|        Linux/UNIX|  0.6711771978021982|\n",
+      "|    t2.micro|           Windows|0.008399999999999982|\n",
+      "|m5d.12xlarge|           Windows|   2.936500000000008|\n",
+      "|    t2.small|        Linux/UNIX|0.007700000000000022|\n",
+      "|  c5.4xlarge|           Windows|  0.9672999999999973|\n",
+      "| c5.18xlarge|        Linux/UNIX|  1.0407999999999988|\n",
+      "|    c4.large|           Windows| 0.11950000000000004|\n",
+      "|    m5.metal|           Windows|   5.720166666666667|\n",
+      "|  i3.8xlarge|        Linux/UNIX|   0.849470638297873|\n",
+      "| r5.12xlarge|           Windows|   4.378440740740735|\n",
+      "+------------+------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import StructType, StructField, DoubleType, TimestampType, StringType\n",
+    "\n",
+    "def load_spot_instance_prices(file_name):\n",
+    "    \"\"\"\n",
+    "    Load a .gz file with spot instance prices into a Spark DataFrame.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        file_name (str): Path to the compressed .gz file.\n",
+    "    \n",
+    "    Returns:\n",
+    "        pyspark.sql.DataFrame: A Spark DataFrame with the data.\n",
+    "    \"\"\"\n",
+    "    # Initialize SparkSession\n",
+    "    spark = SparkSession.builder.appName(\"SpotInstancePricesLoader\").getOrCreate()\n",
+    "    \n",
+    "    # Define schema with memory-efficient data types\n",
+    "    schema = StructType([\n",
+    "        StructField(\"Type\", StringType(), True),  # Drop this column later\n",
+    "        StructField(\"Price\", DoubleType(), True),\n",
+    "        StructField(\"Timestamp\", TimestampType(), True),\n",
+    "        StructField(\"InstanceType\", StringType(), True),\n",
+    "        StructField(\"ProductDescription\", StringType(), True),\n",
+    "        StructField(\"AvailabilityZone\", StringType(), True)\n",
+    "    ])\n",
+    "    \n",
+    "    # Read the .gz file into a DataFrame\n",
+    "    df = spark.read.csv(file_name, sep=\"\\t\", schema=schema, header=True)\n",
+    "    \n",
+    "    # Drop the \"Type\" column\n",
+    "    df = df.drop(\"Type\")\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "# Example usage\n",
+    "# File path to test\n",
+    "file_name = \"dataset-EC2-series/prices-ca-central-1-2019-05-24.txt.gz\"\n",
+    "\n",
+    "# Load the DataFrame\n",
+    "df = load_spot_instance_prices(file_name)\n",
+    "\n",
+    "# Calculate the average price per combination of InstanceType and ProductDescription\n",
+    "avg_prices = (\n",
+    "    df.groupBy(\"InstanceType\", \"ProductDescription\")\n",
+    "        .avg(\"Price\")\n",
+    "        .withColumnRenamed(\"avg(Price)\", \"AveragePrice\")\n",
+    ")\n",
+    "\n",
+    "# Show the results\n",
+    "avg_prices.show()\n"
    ]
   }
  ],
