Finished exercise 3 and 4 (in the PDF)

--- a/exercise10/exercise10.ipynb
+++ b/exercise10/exercise10.ipynb
@@ -1895,6 +1895,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exercise 4 (in the PDF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 5 (in the PDF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 6 (in the PDF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exercise 7"
    ]
   },
